# CPIExtract

./: .gitignore  CPE_testing.ipynb  Comp2Prot_example.ipynb  LICENSE.txt  PCE_testing.ipynb  Prot2Comp_example.ipynb  README.md  SQL_load.ipynb  db_download.ipynb  db_download_2025.ipynb  db_preprocessing.ipynb  db_preprocessing_2025.ipynb  environment.yml  plotting.ipynb  pyproject.toml  setup.py
CPIExtract/: __init__.py
CPIExtract/data_manager/: APIManager.py  LocalManager.py  SQLManager.py  __init__.py
CPIExtract/databases/: Stitch.py
CPIExtract/pipelines/: Comp2Prot.py  Pipeline.py  __init__.py
CPIExtract/servers/: ChEMBLServer.py  PubchemServer.py
CPIExtract/utils/: __init__.py
cpie/: __init__.py
cpie/data_manager/: SQLManager.py  __init__.py
cpie/databases/: BindingDB.py  ChEMBL.py  DTC.py  Database.py  DrugBank.py  DrugCentral.py  PubChem.py  __init__.py
cpie/pipelines/: Comp2Prot.py  Pipeline.py  Prot2Comp.py  __init__.py
cpie/sql_connection/: __init__.py  sql_connection.py
cpie/utils/: helper.py  identifiers.py
cpiextract/: __init__.py
cpiextract/data_manager/: APIManager.py  DataManager.py  LocalManager.py  SQLManager.py  __init__.py
cpiextract/databases/: BindingDB.py  CTD.py  ChEMBL.py  DTC.py  Database.py  DrugBank.py  DrugCentral.py  OTP.py  PDBbind.py  PubChem.py  Stitch.py  __init__.py
cpiextract/pipelines/: Comp2Prot.py  Pipeline.py  Prot2Comp.py  __init__.py
cpiextract/servers/: BiomartServer.py  ChEMBLServer.py  MyGeneServer.py  PubChemServer.py  PubchemServer.py  __init__.py
cpiextract/sql_connection/: __init__.py  sql_connection.py
cpiextract/utils/: __init__.py  helper.py  identifiers.py  typing.py
data/: README.md  dbs_config.json
data/input/: PubChem_compound_text_vitamin D.csv  cid_test_list.csv  compounds.csv  db_proteins.csv  drug_list.csv
data/output/: C2P.csv  P2C.csv  foodb.csv
