[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpiextract"
version = "0.1.0"
description = "CPIExtract is a software package to collect and harmonize small molecule and protein interactions."
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["data-science", "bioinformatics", "cheminformatics", "proteins", "network-science", "data-harmonization", "binding-affinity", "chemical-compounds"]
license = { text = "MIT" }
authors = [
    { name = "Andrea Piras", email = "giulia.menichetti@channing.harvard.edu" },
    { name = "Shi Chenghao" },
    { name = "Michael Sebek" },
    { name = "Gordana Ispirova" },
    { name = "Giulia Menichetti" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.21.0,<2.0.0",
    "mysql-connector-python>=8.3.0",
    "biomart>=0.9.2",
    "chembl_webresource_client>=0.10.8",
    "pubchempy>=1.0.4",
    "tqdm"
]

[project.optional-dependencies]
interactive = ["jupyter"]


[tool.setuptools.packages.find]
where = ["."]
include = ["cpiextract*"]
exclude = ["data", "images"]