[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpiextract"
version = "0.2.0" 
description = "CPIExtract is a software package to collect and harmonize small molecule and protein interactions with support for stereoisomer matching."
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["data-science", "bioinformatics", "cheminformatics", "proteins", "network-science", "data-harmonization", "binding-affinity", "chemical-compounds", "stereoisomers", "inchikey"]
license = { text = "MIT" }
authors = [
    { name = ""Michael Sebek" },
    { name = "Andrea Piras" },
    { name = "Shi Chenghao" },
    { name = "Gordana Ispirova" },
    { name = "Giulia Menichetti", email = "giulia.menichetti@channing.harvard.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
    "pandas>=2.1.4",
    "numpy>=1.21.0,<2.0.0",
    "mysql-connector-python>=8.3.0",
    "biomart>=0.9.2",
    "chembl_webresource_client>=0.10.8",
    "pubchempy>=1.0.4",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
interactive = ["jupyter"]
performance = ["duckdb>=0.9.0"]

[project.urls]
Homepage = "https://github.com/menicgiulia/CPIExtract"
Repository = "https://github.com/menicgiulia/CPIExtract"
Documentation = "https://github.com/menicgiulia/CPIExtract#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["cpiextract*"]
exclude = ["data", "images"]
